--- a/vis-network-editor.css
+++ b/vis-network-editor.css
@@ -1,3 +1,18 @@
+#logo {
+  width: 90px;
+  height: 90px;
+}
+
+.row {
+  margin:0%;
+  padding: 0%;
+}
+
+.col-sm {
+  margin:0%;
+  padding: 0%;
+}
+
 div#mynetwork {
     width: 100%;
     height: 100vh;
